--- a/DynamicArt/Resources/LaunchScreen.storyboard
+++ b/DynamicArt/Resources/LaunchScreen.storyboard
@@ -22,7 +22,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="2ez-WU-iNd" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" id="H0P-k4-fPd"/>
+                            <constraint firstItem="2ez-WU-iNd" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="H0P-k4-fPd"/>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="2ez-WU-iNd" secondAttribute="bottom" id="HFm-Lu-Zda"/>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="2ez-WU-iNd" secondAttribute="trailing" id="LdG-bI-5Yi"/>
                             <constraint firstItem="2ez-WU-iNd" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="uxu-G7-XBZ"/>
